	- remove (legacy) use of RPMTAG_{OBSOLETES,PROVIDES} internally.
	- remove (legacy) support for version 1 packaging.
	- remove (legacy) support for converting gdbm databases.
	- eliminate unused headerGz{Read,Write}.
	- support for rpmlib(...) internal feature dependencies.
	- display rpmlib provides when invoked with --showrc.
	- fix: compare versions if doing --freshen.

3.0.3 -> 3.0.4
	- use compressed filenames on install side.
	- start unifying FD types, CFD_t now gone.
	- check for memory leaks (almost all leaks are plugged).
	- fix: resurrect multiple target platform builds.
	- freshen.sh: detect when all packages are up to date (Ian Macdonald).
	- fix: typo in error message (#6858).
	- add/update dependency scripts (Ken Estes).
	- use directory tokens internally to reduce memory usage.
	- permit --whatprovides to lookup file dependencies.
	- fail to package if absolute symlink points within build root.
	- initial version of check-prereqs.
	- expose enough of legacy fdio interface to compile rpmfind/rpm2html.
	- fix: Fopen should use 0666 as default (umask will be applied later).
	- fix: default for rd_timeoutsecs is 1 sec (avoid ufdio assertion).
	- fix: new FILENAMES tags require package index, not pointer in lookups.
	- rename new FILENAMES tags to BASENAMES/DIRNAMES/DIRINDEXES.
	- fix: don't look at password when searching urlCache.
	- add contentLength sanity check on rpmdb headerWrite.
	- fix: fprint abort on stat("/", ...) in empty chroots.
	- perform glob on remote ftp query args.
	- fix: ftpAbort must close the data channel to read abort status.
	- perform glob on remote ftp install args.
	- fix: reload macros from cmd line when re-reading config files.
	- fix: compressFileList was over-generating dirNames.
	- fix: alAddPackage sorted dirNames too soon, destroying dirMapping.
	- expose enough of legacy fdio interface to compile gnorpm.
	- fix: missing strdup when overriding buildroot from command line
	  argument (#1026,#5006).